# kaunta

./: .dictate.toml  .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  Makefile  PUBLIC_STATS.md  README.md  deno.json  docker-compose.test.yml  docker-compose.yml  eslint.config.js  go.mod  go.sum  index.html  magefile.go  mise.toml  package.json  seed_data.sql
.github/workflows/: build-artifact.yml  build-image.yml  release-please.yml  test.yml
cmd/kaunta/: dashboard.html  index.html  main.go  main_test.go  setup.html  setup_complete.html
decrees/dictator-datastar/: Cargo.toml  README.md
decrees/dictator-datastar/src/: actions.rs  config.rs  helpers.rs  lib.rs  modifiers.rs  typos.rs  validation.rs
decrees/dictator-datastar/wit/: decree.wit
frontend/: vendor.ts
internal/cli/: analytics.go  analytics_output_test.go  analytics_test.go  apikey.go  cli_test_helpers_test.go  db.go  devops.go  doctor.go  domain.go  fiber_config.go  healthcheck.go  root.go  root_test.go  self_upgrade.go  self_upgrade_docker.go  serve.go  user.go  website.go  website_test.go
internal/config/: config.go  config_test.go  setup.go  setup_test.go
internal/database/: database.go  database_test.go  migrate.go  migration_version.gen.go  scheduler.go  scheduler_test.go
internal/geoip/: geoip.go
internal/handlers/: auth.go  auth_datastar.go  auth_integration_test.go  auth_sse.go  auth_test.go  breakdowns.go  dashboard.go  dashboard_datastar.go  datastar.go  filters_test.go  goal_analytics.go  goal_cache.go  goals.go  (+22 more)
scripts/: install.sh
tracker/: kaunta.js
(+61 files in other folders)
